@@ -5,10 +5,13 @@ import ru.vk.itmo.ServiceConfig;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.List;
 
 public final class ServerStarter {
-    private static final String WORKING_DIR = "tmp/dao";
+
+    private static final String DIRECTORY = "tmp/dao/";
 
     private ServerStarter() {
 
@@ -16,16 +19,20 @@ public final class ServerStarter {
 
     @SuppressWarnings("FutureReturnValueIgnored")
     public static void main(String[] args) throws IOException {
-        Path path = Path.of(WORKING_DIR);
-        if (!Files.exists(path)) {
-            Files.createDirectories(path);
+        int port = Integer.parseInt(args[0]);
+        List<String> cluster = Arrays.asList(args).subList(1, args.length);
+
+        Path directoryPath = Paths.get(DIRECTORY + port);
+        if (!Files.exists(directoryPath)) {
+            Files.createDirectories(directoryPath);
         }
+
         MyService service = new MyService(
                 new ServiceConfig(
-                        8080,
-                        "http://localhost:8080",
-                        List.of("http://localhost:8080"),
-                        path
+                        port,
+                        "http://localhost:" + port,
+                        cluster,
+                        directoryPath
                 )
         );
 
